restructured and optimized

--- a/index.html
+++ b/index.html
@@ -20,71 +20,47 @@
     <meta name=DC.Rights content="Robin Frischmann">
     <meta name=DC.Description content="Offizielle Webseite. Robin Frischmann ist Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
     <meta http-equiv=content-type content="text/html; charset=utf-8">
-    <link rel="shortcut icon" href=http://rofrischmann.de/content/images/icons/favicon.ico type=image/x-icon>
     <title>Robin Frischmann - Designer &amp; Developer</title>
-    <link rel=stylesheet href=layout/css/standard.min.css>
-    <link rel=stylesheet href=layout/fonts/fonts.css>
+    <link rel=stylesheet href=css/style.css>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 </head>
 
-<body>
-    <img id=portrait src=content/images/me.jpg>
-    <h1 class="unverschaemt-sans">äbout me</h1>
+<body> <img id=portrait src=res/image/me.jpg>
+    <h1 class=unverschaemt-sans>äbout me</h1>
     <section>My name is <b>Robin Frischmann</b> and I am a <b>Designer</b> and <b>Developer</b> studying <b>computer sciene</b> at <a href="http://www.dhbw-karlsruhe.de">Cooperative State University</a> in <b>Karlsruhe</b>.
         <br>
-        <br> I love creating custom <b>solutions</b> using modern <a href="http://facebook.github.io/react/">frameworks</a> and <a href="http://developer.apple.com/swift">languages</a>. Also I really love working on <a href="https://github.com/rofrischmann?tab=repositories">open source</a> with <b><a href=http://unverschaemt.net class=unverschaemt-sans>unverschämt.</a></b>
+        <br>I love creating custom <b>solutions</b> using modern <a href="http://facebook.github.io/react/">frameworks</a> and <a href="http://developer.apple.com/swift">languages</a>. Also I really love working on <a href="https://github.com/unverschaemt">open source</a> with <b><a href=http://unverschaemt.net class=unverschaemt-sans>unverschämt.</a></b>
         <br>
-        <br>In my leisure time I spend a lot of time outdoor running, exploring or travelling as well as <a href="http://facebook.github.io/react/">blogging</a> and playing music.
+        <br>In my leisure time I spend a lot of time outdoor running, exploring or travelling as well as <a href="http://rofrischmann.tumblr.com">blogging</a> and playing music.
         <br>
         <br>
         <br>
-        <div id=socials>
-            <a id=facebook href=https://www.facebook.com/grindelwald.gaps>
-                <img src=content/images/icons/fb.svg>
-            </a>
-            <a id=twitter href=https://twitter.com/rofrischmann>
-                <img src=content/images/icons/twitter.svg>
-            </a>
-            <a id=behance href=https://www.behance.net/rofrischmann>
-                <img src=content/images/icons/behance.svg>
-            </a>
-            <a id=instagram href=http://instagram.com/rofrischmann>
-                <img src=content/images/icons/instagram.svg>
-            </a>
-            <a id=tumblr href=http://rofrischmann.tumblr.com>
-                <img src=content/images/icons/tumblr.svg>
-            </a>
-            <a id=github href=https://github.com/rofrischmann>
-                <img src=content/images/icons/github.svg>
-            </a>
-            <a id=xing href=https://www.xing.com/profile/Robin_Frischmann>
-                <img src=content/images/icons/xing.svg>
-            </a>
-            <a id=runkeeper href=http://runkeeper.com/user/rofrischmann/profile>
-                <img src=content/images/icons/runkeeper.svg>
-            </a>
-            <a id=vcard href="content/vcard/Robin Frischmann.vcf">
-                <img src=content/images/icons/vcard.svg>
-            </a>
-            <a id=contact href=mailto:robin@rofrischmann.de>
-                <img src=content/images/icons/a.svg>
-            </a>
+        <footer>
+            <a href=https://www.facebook.com/grindelwald.gaps> <img src=res/icon/fb.svg> </a>
+            <a href=https://twitter.com/rofrischmann> <img src=res/icon/twitter.svg> </a>
+            <a href=https://www.behance.net/rofrischmann> <img src=res/icon/behance.svg> </a>
+            <a ihref=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
+            <a href=http://rofrischmann.tumblr.com> <img src=res/icon/tumblr.svg> </a>
+            <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
+            <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
+            <a href="http://runkeeper.com/user/rofrischmann/profile"> <img src=res/icon/runkeeper.svg> </a>
+            <a href="res/vcard/Robin Frischmann.vcf"> <img src=res/icon/vcard.svg> </a>
+            <a href=mailto:robin@rofrischmann.de> <img src=res/icon/a.svg> </a>
             <br>
-        </div>
+        </footer>
     </section>
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-51308679-1', 'auto');
-            ga('send', 'pageview');
-        </script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-51308679-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
