text and link fix

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <br>
         <br>I love creating custom <b>solutions</b> using modern <a href="http://facebook.github.io/react/">frameworks</a> and <a href="http://developer.apple.com/swift">languages</a>. Also I really love working on <a href="https://github.com/unverschaemt">open source</a> with <b><a href=http://unverschaemt.net class=unverschaemt-sans>unverschämt.</a></b>
         <br>
-        <br>In my leisure time I spend a lot of time outdoor running, exploring or travelling as well as <a href="http://rofrischmann.tumblr.com">blogging</a> and playing music.
+        <br>In spend a lot of my leisure time outdoor running, exploring or travelling as well as <a href="http://rofrischmann.tumblr.com">blogging</a> and playing music.
         <br>
         <br>
         <br>
@@ -39,7 +39,7 @@
             <a href=https://www.facebook.com/grindelwald.gaps> <img src=res/icon/fb.svg> </a>
             <a href=https://twitter.com/rofrischmann> <img src=res/icon/twitter.svg> </a>
             <a href=https://www.behance.net/rofrischmann> <img src=res/icon/behance.svg> </a>
-            <a ihref=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
+            <a href=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
             <a href=http://rofrischmann.tumblr.com> <img src=res/icon/tumblr.svg> </a>
             <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
             <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
