--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body> <img id=portrait src=res/image/me.jpg>
     <h1 class=unverschaemt-sans>äbout me</h1>
-    <section>My name is <b>Robin Frischmann</b> and I am a <b>Designer</b> and <b>Developer</b> studying <b>computer sciene</b> at <a href="http://www.dhbw-karlsruhe.de">Cooperative State University</a> in <b>Karlsruhe</b>.
+    <section>My name is <b>Robin Frischmann</b> and I am a <b>designer</b> and <b>developer</b> studying <b>computer sciene</b> at <a href="http://www.dhbw-karlsruhe.de">Cooperative State University</a> in <b>Karlsruhe</b>.
         <br>
         <br>I love creating custom <b>solutions</b> using modern <a href="http://facebook.github.io/react/">frameworks</a> and <a href="http://developer.apple.com/swift">languages</a>. Also I really love working on <a href="https://github.com/unverschaemt">open source</a> with <b><a href=http://unverschaemt.net class=unverschaemt-sans>unverschämt.</a></b>
         <br>
