added linkedin profile to portfolio

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <a href=http://rofrischmann.tumblr.com> <img src=res/icon/tumblr.svg> </a>
             <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
             <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
+            <a href=https://www.linkedin.com/pub/robin-frischmann/a5/832/93a> <img src=res/icon/linkedin.svg> </a>
             <a href="http://runkeeper.com/user/rofrischmann/profile"> <img src=res/icon/runkeeper.svg> </a>
             <a href="res/vcard/Robin Frischmann.vcf"> <img src=res/icon/vcard.svg> </a>
             <a href=mailto:robin@rofrischmann.de> <img src=res/icon/a.svg> </a>
