updated blog link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href=https://twitter.com/rofrischmann> <img src=res/icon/twitter.svg> </a>
             <a href=https://www.behance.net/rofrischmann> <img src=res/icon/behance.svg> </a>
             <a href=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
-            <a href=http://rofrischmann.tumblr.com> <img src=res/icon/tumblr.svg> </a>
+            <a href=http://blog.rofrischmann.de> <img src=res/icon/tumblr.svg> </a>
             <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
             <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
             <a href=https://www.linkedin.com/pub/robin-frischmann/a5/832/93a> <img src=res/icon/linkedin.svg> </a>
