updated personal webpage

--- a/index.html
+++ b/index.html
@@ -29,22 +29,20 @@
     <h1 class=unverschaemt-sans>äbout me</h1>
     <section>My name is <b>Robin Frischmann</b> and I am a <b>designer</b> and <b>developer</b> studying <b>computer sciene</b> at <a href="http://www.dhbw-karlsruhe.de">Cooperative State University</a> in <b>Karlsruhe</b>.
         <br>
-        <br>I love creating custom <b>solutions</b> using modern <a href="http://facebook.github.io/react/">frameworks</a> and <a href="http://developer.apple.com/swift">languages</a>. Also I really love working on <a href="https://github.com/unverschaemt">open source</a> with <b><a href=http://unverschaemt.net class=unverschaemt-sans>unverschämt.</a></b>
+        <br>I love creating custom <b>solutions</b> using modern <a href="http://facebook.github.io/react/">libraries</a> and <a href="http://developer.apple.com/swift">languages</a>. Also I really love working on <a href="https://github.com/rofrischmann">open source</a> with <b><a href=http://unverschaemt.net class=unverschaemt-sans>unverschämt.</a></b>
         <br>
-        <br>In spend a lot of my leisure time outdoor running, exploring or travelling as well as <a href="http://rofrischmann.tumblr.com">blogging</a> and playing music.
+        <br>In spend a lot of my leisure time outdoor running, exploring or travelling as well as <a href="https://medium.com/@rofrischmann">writing</a> and playing music.
         <br>
         <br>
         <br>
         <footer>
             <a href=https://www.facebook.com/grindelwald.gaps> <img src=res/icon/fb.svg> </a>
             <a href=https://twitter.com/rofrischmann> <img src=res/icon/twitter.svg> </a>
-            <a href=https://www.behance.net/rofrischmann> <img src=res/icon/behance.svg> </a>
+            <a href=https://medium.com/@rofrischmann> <img src=res/icon/medium.svg> </a>
             <a href=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
-            <a href=http://rofrischmann.tumblr.com> <img src=res/icon/tumblr.svg> </a>
             <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
             <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
             <a href=https://www.linkedin.com/pub/robin-frischmann/a5/832/93a> <img src=res/icon/linkedin.svg> </a>
-            <a href="http://runkeeper.com/user/rofrischmann/profile"> <img src=res/icon/runkeeper.svg> </a>
             <a href="res/vcard/Robin Frischmann.vcf"> <img src=res/icon/vcard.svg> </a>
             <a href=mailto:robin@rofrischmann.de> <img src=res/icon/a.svg> </a>
             <br>
