--- a/index.html
+++ b/index.html
@@ -1,65 +1,44 @@
 <!DOCTYPE html>
 
 <head>
-    <meta property=og:title content="Robin Frischmann - Designer &amp; Developer">
+    <meta property=og:title content="Robin Frischmann - React Developer &amp; Developer">
     <meta property=og:url content="http://www.rofrischmann.de/">
-    <meta property=og:site_name content="Robin Frischmann - Designer &amp; Developer">
-    <meta property=og:description content="Offizielle Webseite. Robin Frischmann ist Designer &amp; Developer und immer bereit f&uuml;r neue Herausforderungen im Web &amp; App Bereich.">
+    <meta property=og:site_name content="Robin Frischmann - React Developer &amp; Developer">
+    <meta property=og:description content="Robin Frischmann's personal webpage. React Developer and Designer from Karlsruhe.">
     <meta property=og:image content=http://rofrischmann.de/content/images/me.png>
     <meta name=author content="Robin Frischmann">
     <meta name=publisher content="Robin Frischmann">
     <meta name=copyright content="Robin Frischmann">
-    <meta name=description content="Offizielle Webseite. Robin Frischmann ist Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
-    <meta name=keywords content="Robin, Frischmann, Webdesign, React, UI, Kit, Backbone, Sencha, Web, Design, Swift, JavaScript, iOS, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop, Adobe, Illustrator">
+    <meta name=description content="Robin Frischmann's personal webpage. React Developer and Designer from Karlsruhe.">
+    <meta name=keywords content="Robin, Frischmann, React, React Native, Developer, Web, Webdesign, Design, Swift, JavaScript, iOS, App, Appdesign, HTML, CSS, JS">
     <meta name=page-topic content=Medien>
     <meta name=page-type content="Software Download">
     <meta name=robots content="index, follow">
     <meta name=viewport content="width=device-width,initial-scale=0.8">
-    <meta name=DC.Creator content="Robin Frischmann">
-    <meta name=DC.Publisher content="Robin Frischmann">
-    <meta name=DC.Rights content="Robin Frischmann">
-    <meta name=DC.Description content="Offizielle Webseite. Robin Frischmann ist Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
     <meta http-equiv=content-type content="text/html; charset=utf-8">
-    <title>Robin Frischmann - Designer &amp; Developer</title>
+    <title>Robin Frischmann - React Developer &amp; Developer</title>
     <link rel=stylesheet href=css/style.css>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 </head>
 
-<body> <img id=portrait src=res/image/me.jpg>
-    <h1 class=unverschaemt-sans>äbout me</h1>
-    <section>My name is <b>Robin Frischmann</b> and I am a <b>designer</b> and <b>developer</b> studying <b>computer sciene</b> at <a href="http://www.dhbw-karlsruhe.de">Cooperative State University</a> in <b>Karlsruhe</b>.
+<body>
+  <img id=portrait src=res/image/me.jpg>
+  <h1 class=unverschaemt-sans>äbout me</h1>
+  <section>My name is <b>Robin Frischmann</b> and I am a <a href="http://facebook.github.io/react/"><b>React</a> developer</b> and <b>designer</b> studying <b>computer sciene</b> at <a href="http://www.dhbw-karlsruhe.de">Cooperative State University</a> in <b>Karlsruhe</b>.
+    <br>
+    <br>I focus on <a href="https://github.com/rofrischmann/react-look">component styling</a> and love creating beautiful react apps for any platform. Most of my work actually is open source on <a href="https://github.com/rofrischmann">Github</a>.<br>
+    <br>If not coding you will most likely catch me outdoor running, exploring and travelling our nature. I also really enjoy playing music or reading a well-written book.<br><br><br>
+      <footer>
+        <a href=https://www.facebook.com/grindelwald.gaps> <img src=res/icon/fb.svg> </a>
+        <a href=https://twitter.com/rofrischmann> <img src=res/icon/twitter.svg> </a>
+        <a href=https://medium.com/@rofrischmann> <img src=res/icon/medium.svg> </a>
+        <a href=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
+        <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
+        <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
+        <a href=https://www.linkedin.com/pub/robin-frischmann/a5/832/93a> <img src=res/icon/linkedin.svg> </a>
+        <a href="res/vcard/Robin Frischmann.vcf"> <img src=res/icon/vcard.svg> </a>
+        <a href=mailto:robin@rofrischmann.de> <img src=res/icon/a.svg> </a>
         <br>
-        <br>I love creating custom <b>solutions</b> using modern <a href="http://facebook.github.io/react/">libraries</a> and <a href="http://developer.apple.com/swift">languages</a>. Also I really love working on <a href="https://github.com/rofrischmann">open source</a> with <b><a href=http://unverschaemt.net class=unverschaemt-sans>unverschämt.</a></b>
-        <br>
-        <br>In spend a lot of my leisure time outdoor running, exploring or travelling as well as <a href="https://medium.com/@rofrischmann">writing</a> and playing music.
-        <br>
-        <br>
-        <br>
-        <footer>
-            <a href=https://www.facebook.com/grindelwald.gaps> <img src=res/icon/fb.svg> </a>
-            <a href=https://twitter.com/rofrischmann> <img src=res/icon/twitter.svg> </a>
-            <a href=https://medium.com/@rofrischmann> <img src=res/icon/medium.svg> </a>
-            <a href=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
-            <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
-            <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
-            <a href=https://www.linkedin.com/pub/robin-frischmann/a5/832/93a> <img src=res/icon/linkedin.svg> </a>
-            <a href="res/vcard/Robin Frischmann.vcf"> <img src=res/icon/vcard.svg> </a>
-            <a href=mailto:robin@rofrischmann.de> <img src=res/icon/a.svg> </a>
-            <br>
-        </footer>
-    </section>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-51308679-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+      </footer>
+  </section>
 </body>
