--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <meta property=og:title content="Robin Frischmann - React Developer &amp; Developer">
     <meta property=og:url content="http://www.rofrischmann.de/">
@@ -16,29 +16,41 @@
     <meta name=robots content="index, follow">
     <meta name=viewport content="width=device-width,initial-scale=0.8">
     <meta http-equiv=content-type content="text/html; charset=utf-8">
-    <title>Robin Frischmann - React Developer &amp; Developer</title>
+    <title>Robin Frischmann - Software Engineer</title>
     <link rel=stylesheet href=css/style.css>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-  <img id=portrait src=res/image/me.jpg>
   <h1 class=unverschaemt-sans>äbout me</h1>
-  <section>My name is <b>Robin Frischmann</b> and I am a <a href="http://facebook.github.io/react/"><b>React</a> developer</b> and <b>designer</b> studying <b>computer sciene</b> at <a href="http://www.dhbw-karlsruhe.de">Cooperative State University</a> in <b>Karlsruhe</b>.
+  <section>
+    My name is Robin Frischmann and I am a <b>software engineer</b> based in Karlsruhe, Germany. In September 2016 I finished my B.Sc. in computer science.
     <br>
-    <br>I focus on <a href="https://github.com/rofrischmann/react-look">component styling</a> and love creating beautiful react apps for any platform. Most of my work actually is open source on <a href="https://github.com/rofrischmann">Github</a>.<br>
-    <br>If not coding you will most likely catch me outdoor running, exploring and travelling our nature. I also really enjoy playing music or reading a well-written book.<br><br><br>
-      <footer>
-        <a href=https://www.facebook.com/grindelwald.gaps> <img src=res/icon/fb.svg> </a>
-        <a href=https://twitter.com/rofrischmann> <img src=res/icon/twitter.svg> </a>
-        <a href=https://medium.com/@rofrischmann> <img src=res/icon/medium.svg> </a>
-        <a href=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
-        <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
-        <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
-        <a href=https://www.linkedin.com/pub/robin-frischmann/a5/832/93a> <img src=res/icon/linkedin.svg> </a>
-        <a href="res/vcard/Robin Frischmann.vcf"> <img src=res/icon/vcard.svg> </a>
-        <a href=mailto:robin@rofrischmann.de> <img src=res/icon/a.svg> </a>
-        <br>
-      </footer>
+    <br>
+    I focus on <b>web & mobile app development</b> and love creating beautiful solutions of all kind. I truly believe in open source and love to pay back to the community. Therefore, most of my work is on <a href="https://github.com/rofrischmann">Github</a>.
+	  I use <b>JavaScript</b>, <b>React</b>, <b>Redux</b>, <b>Fela</b>, <b>GraphQL</b> and <b>Elm</b> amongst others and am interested in <b>functional programming</b> of all kind.
+    <br><br>
+    I speak <b>German</b>, <b>English</b>, <b>Norwegian</b>, <b>Swedish</b> and some <b>French</b> as well.<br>
+    If not coding you will most likely catch me outdoors <i>running</i>, <i>exploring</i> and <i>travelling</i> our nature. I love <i>design, architecture, language, (playing) music, vegan food</i> and <i>well-written books</i> as well as <i>yoga</i> and <i>meditation</i>.
   </section>
+
+  <br><br>
+
+  <h3>Blog posts</h3>
+  <section>
+    • <a href="https://medium.com/@rofrischmann/styles-as-functions-of-state-1885627a63f7#.ee7a71d8z">Style as a Function of State</a>
+  </section>
+
+  <br><br>
+
+  <footer>
+    <a href=https://twitter.com/rofrischmann> <img src=res/icon/twitter.svg> </a>
+    <a href=https://medium.com/@rofrischmann> <img src=res/icon/medium.svg> </a>
+    <a href=http://instagram.com/rofrischmann> <img src=res/icon/instagram.svg> </a>
+    <a href=https://github.com/rofrischmann> <img src=res/icon/github.svg> </a>
+    <a href=https://www.xing.com/profile/Robin_Frischmann> <img src=res/icon/xing.svg> </a>
+    <a href="res/vcard/Robin Frischmann.vcf"> <img src=res/icon/vcard.svg> </a>
+    <a href=mailto:robin@rofrischmann.de> <img src=res/icon/a.svg> </a>
+  </footer>
 </body>
+</html>
