--- a/index.html
+++ b/index.html
@@ -24,22 +24,23 @@
 <body>
   <h1 class=unverschaemt-sans>äbout me</h1>
   <section>
-    My name is Robin Frischmann and I am a <b>software engineer</b> based in Karlsruhe, Germany. In September 2016 I finished my B.Sc. in computer science.
+    My name is Robin Frischmann and I am a <b>frontend architect</b> and <b>UI expert</b> based in Karlsruhe, Germany. I am currently doing my M.Sc. in computer science and B.Sc. in psychology.
     <br>
     <br>
-    I focus on <b>web & mobile app development</b> and love creating beautiful solutions of all kind. I truly believe in open source and love to pay back to the community. Therefore, most of my work is on <a href="https://github.com/rofrischmann">Github</a>.
+    My focus is on <b>web & mobile app development</b> and love crafting beautiful solutions. I truly believe in open source and love to pay back to the community. Therefore, most of my work is on <a href="https://github.com/rofrischmann">Github</a>.
 	  I use <b>JavaScript</b>, <b>React</b>, <b>Redux</b>, <b>Fela</b>, <b>GraphQL</b> and <b>Elm</b> amongst others and am interested in <b>functional programming</b> of all kind.
     <br><br>
     I speak <b>German</b>, <b>English</b>, <b>Norwegian</b>, <b>Swedish</b> and some <b>French</b> as well.<br>
-    If not coding you will most likely catch me outdoors <i>running</i>, <i>exploring</i> and <i>travelling</i> our nature. I love <i>design, architecture, language, (playing) music, vegan food</i> and <i>well-written books</i> as well as <i>yoga</i> and <i>meditation</i>.
+    If not coding you will most likely catch me outdoors running<, exploring and travelling our nature. I love design, architecture, language, (playing) music, vegan food and well-written books as well as yoga and meditation.
   </section>
 
   <br><br>
 
   <h3>Blog posts</h3>
-  <section>
-    • <a href="https://medium.com/@rofrischmann/styles-as-functions-of-state-1885627a63f7#.ee7a71d8z">Style as a Function of State</a>
-  </section>
+  <ul>
+    <li><a href="https://medium.com/@rofrischmann/styles-as-functions-of-state-1885627a63f7#.ee7a71d8z">Style as a Function of State</a></li>
+    <li><a href="https://medium.com/ninjaconcept/interactive-dynamic-force-directed-graphs-with-d3-da720c6d7811">Interactive & Dynamic Force-Directed Graphs with D3</a></li>
+</ul>
 
   <br><br>
 
